--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.3"
-  services:
-    web:
-      build:
-        context:
-      ports:
-        - 5000:5000
+services:
+  web:
+    build:
+      context: .
+    ports:
+      - "5000:5000"
